--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   rive: ^0.7.9
   http: ^0.13.2
+  pagination_view: ^1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,10 +49,17 @@ flutter:
     - family:  NicamalIcons
       fonts:
         - asset: fonts/NicamalIcons.ttf
+    - family: Quicksand
+      fonts:
+        - asset: fonts/Quicksand-Medium.ttf
+        - asset: fonts/Quicksand-Bold.ttf
+          weight: 700
 
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/nicamal_splashscreen.riv
+    - assets/background.jpg
+    - assets/nicamal-progressindicator.riv
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
