--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.nicamal_app">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="nicamal_app"
+        android:label="Nicamal"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
