--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,14 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   rive: ^0.7.9
-  http: ^0.13.2
   pagination_view: ^1.0.2
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   photo_view: ^0.11.1
+  dio: ^4.0.0
 
 dev_dependencies:
   flutter_test:
