--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   dio: ^4.0.0
   image_picker: ^0.8.0
   shared_preferences: ^2.0.6
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,7 @@ flutter:
     - assets/nicamal_splashscreen_2.riv
     - assets/main.webp
     - assets/background.jpg
+    - assets/profile-background.jpeg
     - assets/nicamal-progressindicator.riv
 
   # An image asset can refer to one or more resolution-specific "variants", see
