--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   image_picker: ^0.8.0
   shared_preferences: ^2.0.6
   url_launcher: ^6.0.9
+  firebase_dynamic_links: ^2.0.7
 
 dev_dependencies:
   flutter_test:
